--- a/webapp/find-user.xhtml
+++ b/webapp/find-user.xhtml
@@ -1,36 +1,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
 
 </h:head>
 
 <h:body>
-
-	<h:form>
-		<p:menubar>
-			<p:menuitem value="Users" url="users.xhtml" />
-			<p:submenu label="Books">
-				<p:menuitem value="Add new" url="book-form.xhtml" />
-				<p:menuitem value="All books" url="books.xhtml" />
-			</p:submenu>
-			<p:submenu label="Loans">
-				<p:menuitem value="New loan" url="find-user.xhtml" />
-				<p:menuitem value="Active loan" url="loan-form.xhtml" />
-				<p:menuitem value="Loans history" url="loans-history.xhtml" />
-			</p:submenu>
-		</p:menubar>
-	</h:form>
+	<ui:insert name="menu">
+		<ui:include src="/WEB-INF/menu.xhtml" />
+	</ui:insert>
 	<h:form id="form">
 		<p:growl id="msgs" showDetail="true" />
 		<h3>Wpisz pesel</h3>
-		<p:inputText value="#{loanController.user.pesel}" placeholder="Pesel" />
+		<p:inputText value="#{findUserBean.pesel}" placeholder="Pesel" />
 		<p:commandButton value="submit"
-			actionListener="#{loanController.findUserByPesel}"
-			update=":form:msgs" onclick="PF('form').update()" />
-
+			actionListener="#{findUserBean.putSessionUser}"
+			update=":form:msgs" />
 	</h:form>
 </h:body>
 </html>
