--- a/webapp/loans-active.xhtml
+++ b/webapp/loans-active.xhtml
@@ -12,10 +12,7 @@
 	</ui:insert>
 
 	<h:form>
-		<p:dataTable var="loan" value="#{loansHistoryBean.allLoans}" rows="10"
-			paginator="true"
-			paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-			rowsPerPageTemplate="5,10,15">
+		<p:dataTable var="loan" value="#{loansActiveBean.activeLoans}"  >
 			<p:column headerText="Książka">
 				<h:outputText value="#{loan.book.name}" />
 			</p:column>
@@ -41,22 +38,14 @@
 				<h:outputText value="#{loan.rentalDate}" />
 			</p:column>
 			
-			<p:column headerText="Data zwrotu">
-				<h:outputText value="#{loan.realReturnDate}" />
+			<p:column headerText="Do zwrotu">
+				<h:outputText value="#{loan.expectedReturnDate}" />
 			</p:column>
 			<p:column headerText="Statut">
 				<h:outputText value="Do zwrotu" style="color:red"
 					rendered="#{loan.active}" />
 				<h:outputText value="Zwrócona" rendered="#{!loan.active}" />
 			</p:column>
-
-			<f:facet name="paginatorTopLeft">
-				<p:commandButton type="button" icon="pi pi-refresh" />
-			</f:facet>
-
-			<f:facet name="paginatorBottomRight">
-				<p:commandButton type="button" icon="pi pi-cloud-upload" />
-			</f:facet>
 
 		</p:dataTable>
 	</h:form>
