--- a/webapp/user-loans-history.xhtml
+++ b/webapp/user-loans-history.xhtml
@@ -12,7 +12,7 @@
 	</ui:insert>
 
 	<h:form>
-		<p:dataTable var="loan" value="#{loansHistoryBean.allLoans}" rows="10"
+		<p:dataTable var="loan" value="#{userLoansHistoryBean.loans}" rows="10"
 			paginator="true"
 			paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 			rowsPerPageTemplate="5,10,15">
